<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:textSize="26sp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:minHeight="50dp"
        android:background="@android:color/black"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/plus"
            android:id="@+id/plus"
            android:padding="0dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/minus"
            android:id="@+id/minus"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/multiplication"
            android:id="@+id/multiplication"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/division"
            android:id="@+id/division"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/equals"
            android:id="@+id/equals"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/one"
            android:id="@+id/one"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/two"
            android:id="@+id/two"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/three"
            android:id="@+id/three"
            android:textSize="26sp"
            style="@style/Base.Widget.AppCompat.Button.Colored"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/four"
            android:id="@+id/four"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/five"
            android:id="@+id/five"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/six"
            android:id="@+id/six"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/seven"
            android:id="@+id/seven"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/eight"
            android:id="@+id/eight"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/nine"
            android:id="@+id/nine"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/zero"
            android:id="@+id/zero"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/delete"
            android:id="@+id/delete"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/clear"
            android:id="@+id/clear"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/dot"
            android:id="@+id/dot"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="26sp"/>
    </LinearLayout>
</LinearLayout>